# Codescanner

./: .gitignore  CHANGELOG  LICENSE.txt  MANIFEST.in  README.md  byte_plot.py  codescan_interface.py  codescanner_analysis.py  color_map.py  comparison_analysis.py  extended_analysis.py  file_header_parser.py  header_parser.py  libcodescanpy.py  overlay_plot.py  plot_base.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: lint_action.yml  pytest_action.yml
C_lib/: LICENSE.txt  README.md  codescan  codescandemo.cpp
C_lib/common_shared/: CPU_architectures.h  FromTo.h  getCSLanguages.c  shared_codescan.h
C_lib/languages/: mips_le.lang  ppc_be.lang  ppc_le.lang
Example_scripts/: baseAddr  batch_codescan.py  compare  dual_compare.py  requirements.txt  yaragen
codescanner_analysis/: __init__.py  byte_plot.py  codescan_interface.py  codescanner_analysis.py  color_map.py  comparison_analysis.py  file_header_parser.py  libcodescanpy.py  overlay_plot.py  plot_base.py  quick_codescan.py
codescanner_analysis/test/: helper.py  test_byte_plot.py  test_codescan_interface.py  test_codescanner_analysis.py  test_color_map.py  test_comparison_analysis.py  test_extended_analysis.py  test_file_header_parser.py  test_file_to_array.py  test_file_utils.py  test_lib_codescan.py  test_lib_header_parser.py  test_overlay_plot.py  test_plot_base.py
test/: helper.py  test_byte_plot.py  test_codescan_interface.py  test_codescanner_analysis.py  test_color_map.py  test_comparison_analysis.py  test_extended_analysis.py  test_file_header_parser.py  test_file_to_array.py  test_file_utils.py  test_lib_codescan.py  test_lib_header_parser.py  test_overlay_plot.py  test_plot_base.py
utils/: file_to_array.py  file_utils.py
(+21 files in other folders)
